# bias-simulation

./: .env.example  .gitignore  README.md  pyproject.toml
cv_analyzer/: app.py  bias_prompt.py  simulation_prompt.py
examples/: cv_examples.md  job_description_data_science.txt
